objects/FileUDMO_SI_chunk__dll.object
<CustomObject>
    <fields>
        <fullName>ChunkFormat__c</fullName>
        <label>Chunk Format</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChunkSequenceNumber__c</fullName>
        <label>Chunk Sequence Number</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChunkType__c</fullName>
        <label>Chunk Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chunk__c</fullName>
        <label>Chunk</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citations__c</fullName>
        <label>Citations</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_RecordId__c</fullName>
        <label>KQ_RecordId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_SourceRecordId__c</fullName>
        <label>KQ_SourceRecordId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediaSource__c</fullName>
        <label>Media Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondarySourceRecordId__c</fullName>
        <label>Secondary Source Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceRecordId__c</fullName>
        <label>Source Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>